--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "antd": "^4.6.1",
     "autoprefixer": "^9.8.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
@@ -18,6 +19,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "classnames": "^2.2.6",
     "colorette": "^1.2.0",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
@@ -150,6 +152,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.13",
     "prettier": "2.1.1",
+    "react-styleguidist": "^11.0.8",
     "stylelint": "^13.6.1",
     "stylelint-config-recommended": "^3.0.0"
   },
@@ -195,7 +198,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{css,scss,sass,less,js,jsx,json}": [ 
+    "src/**/*.{css,scss,sass,less,js,jsx,json}": [
       "prettier --write",
       "git add"
     ],
@@ -206,5 +209,5 @@
     "src/**/*.{css,scss,sass,less}": [
       "stylelint"
     ]
-}
+  }
 }
