--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.6",
     "colorette": "^1.2.0",
     "css-loader": "3.4.2",
+    "date-fns": "^2.16.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint-config-react-app": "^5.2.1",
@@ -50,6 +51,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "reset-css": "^5.0.1",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
