--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/parser": "^2.10.0",
     "antd": "^4.6.1",
     "autoprefixer": "^9.8.0",
+    "axios": "^0.20.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
