--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.16.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "emoji-mart": "^3.0.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
@@ -35,6 +36,7 @@
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
+    "install": "^0.13.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
@@ -42,6 +44,7 @@
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.14.1",
+    "npm": "^6.14.8",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
